# ros_core_client

./: .gitignore  README.md  hatch_build.py  pyproject.toml
proto/: gateway.proto
ros_core_client/: __init__.py  communicator.py
ros_core_client/communication_objects/: relay_service_pb2_grpc.py
ros_core_client/ros1/: __init__.py  communicator.py  env.py
ros_core_client/ros1/communication_objects/: relay_service_pb2.py
ros_core_client/ros2/: __init__.py  communicator.py  env.py
ros_core_client/ros2/proto/: __init__.py
